--- a/client/src/components/Home/Home.css
+++ b/client/src/components/Home/Home.css
@@ -12,10 +12,4 @@
     height: 100%;
 }
 
-.paintings {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 50px;
-}
 
