--- a/client/src/index.css
+++ b/client/src/index.css
@@ -45,7 +45,7 @@ p {
 }
 
 h2 {
-    margin: 30px 0px;
+    margin: 20px 0px;
 }
 
 h3 {
